overflow issue solved

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,5 @@
+html, body {
+    overflow-x: hidden;
+  }
+
 @import "tailwindcss";
